--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@types/styled-components-react-native": "^5.1.1",
     "babel-preset-expo": "~8.3.0",
     "jest-expo": "~41.0.0",
-    "typescript": "~4.0.0"
+    "typescript": "~4.0.0",
+    "typescript-styled-plugin": "^0.18.1"
   },
   "jest": {
     "preset": "react-native"
