--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "expo-app-loading": "^1.0.3",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
+    "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
     "intl": "^1.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.8.6",
     "react-native": "~0.63.4",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "^2.2.0",
