--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-app-loading": "^1.0.3",
     "expo-application": "^3.2.0",
     "expo-font": "~9.1.0",
+    "expo-google-app-auth": "^8.2.2",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.5.4",
