--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.22.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
+    "expo-apple-authentication": "~3.1.0",
     "expo-application": "^3.2.0",
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.2.2",
@@ -46,13 +47,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "@types/styled-components-react-native": "^5.1.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-root-import": "^6.6.0",
+    "babel-preset-expo": "~8.3.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.0.0",
@@ -64,11 +68,8 @@
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2",
-    "@types/react-native": "~0.63.2",
-    "@types/styled-components-react-native": "^5.1.1",
-    "babel-preset-expo": "~8.3.0",
     "jest-expo": "~41.0.0",
+    "prettier": "^2.3.2",
     "typescript": "~4.0.0",
     "typescript-styled-plugin": "^0.18.1"
   },
