--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
       "react/jsx-curly-newline": "off",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
       "@typescript-eslint/camelcase": "off",
+      "@typescript-eslint/no-non-null-assertion": "off",
       "import/extensions": [
         "error",
         "ignorePackages",
