docs: hotfix in eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
       "import/no-duplicates": "off",
       "react/prop-types": "off",
       "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
+      "react-hooks/exhaustive-deps": "off",
       "react/jsx-one-expression-per-line": "off",
       "react/require-default-props": "off",
       "react/jsx-props-no-spreading": "off",
